tests/errors/ordre_decl/import2.bxml
<?xml version="1.0" encoding="UTF-8" ?>
<Machine xmlns='https://www.atelierb.eu/Formats/bxml' version='1.0' name='import2' type='abstraction' position='false' semantic='true' b0check='false'>
    <Sees>
        <Referenced_Machine>
            <Name>b2rust_types</Name>
        </Referenced_Machine>
    </Sees>
    <Sets>
        <Set>
            <Id value='ss_import2' typref='4'/>
        </Set>
        <Set>
            <Id value='en_import2' typref='5'/>
            <Enumerated_Values>
                <Id value='elt_import2' typref='6'/>
            </Enumerated_Values>
        </Set>
    </Sets>
    <Concrete_Constants>
        <Id value='cc_import2' typref='1'/>
        <Id value='it_import2' typref='2'/>
    </Concrete_Constants>
    <Concrete_Variables>
        <Id value='vv_import2' typref='1'/>
    </Concrete_Variables>
    <Properties>
        <Nary_Pred op='&amp;'>
            <Exp_Comparison op=':'>
                <Id value='cc_import2' typref='1'/>
                <Id value='rust_i32' typref='2'/>
            </Exp_Comparison>
            <Exp_Comparison op='='>
                <Id value='it_import2' typref='2'/>
                <Binary_Exp op='..' typref='2'>
                    <Integer_Literal value='2' typref='1'/>
                    <Integer_Literal value='100' typref='1'/>
                </Binary_Exp>
            </Exp_Comparison>
        </Nary_Pred>
    </Properties>
    <Invariant>
        <Exp_Comparison op=':'>
            <Id value='vv_import2' typref='1'/>
            <Id value='rust_i32' typref='2'/>
        </Exp_Comparison>
    </Invariant>
    <Initialisation>
        <Assignement_Sub>
            <Variables>
                <Id value='vv_import2' typref='1'/>
            </Variables>
            <Values>
                <Integer_Literal value='2' typref='1'/>
            </Values>
        </Assignement_Sub>
    </Initialisation>
    <Operations>
        <Operation name='op_promotes2'>
            <Body>
                <Skip/>
            </Body>
        </Operation>
    </Operations>
    <TypeInfos>
<Type id='0'>
<Id value='BOOL'/>
</Type>
<Type id='1'>
<Id value='INTEGER'/>
</Type>
<Type id='2'>
<Unary_Exp op='POW'>
<Id value='INTEGER'/>
</Unary_Exp>
</Type>
<Type id='3'>
<Unary_Exp op='POW'>
<Unary_Exp op='POW'>
<Id value='INTEGER'/>
</Unary_Exp>
</Unary_Exp>
</Type>
    <Type id='4'>
        <Unary_Exp op='POW'>
<Id value='ss_import2'/>
</Unary_Exp>
        </Type>
    <Type id='5'>
        <Unary_Exp op='POW'>
<Id value='en_import2'/>
</Unary_Exp>
        </Type>
    <Type id='6'>
        <Id value='en_import2'/>
        </Type>
</TypeInfos>
    
</Machine>